# brainfuck

./: Cargo.toml  README.md  TODO.md  devnotes.md  squares.txt
brainfuck_programs/: comments_ignored_poundsign.bf  comments_ignored_semicolon.bf  comments_ignored_semipound.bf  ends_on_plus.bf  fibonacci.bf  headlessWhile.bf  hello_world.bf  layeredBracketsTest.bf  obscure.bf  openEndedWhile.bf  optimize_me.bf  overflowMP.bf  rot13.bf  squares.py  wc.bf  yapi.bf  yapi_4.bf
src/: brainfuck.rs  main.rs
