[package]
name = "brainfuck"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "1.1.0"
structopt = "0.3"

[dev-dependencies]
newline-converter = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.test]
opt-level = 3 # tests still work but are really slow without this
