[package]
name = "brainfuck"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
rustc-hash = "1.1.0"

[dev-dependencies]
newline-converter = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true

[profile.test]
opt-level = 3 # tests still work but are really slow without this
